# crcli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
src/: lib.rs  main.rs
