[package]
name = "crcli"
version = "0.1.2"
authors = ["Erik Kallen <info@erikkallen.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
hex = "0.4.3"
crc-any = "2.4.0"